--- a/LockGlyphRayman/DEBIAN/control
+++ b/LockGlyphRayman/DEBIAN/control
@@ -3,7 +3,7 @@ Name: LockGlyph - Rayman
 Version: 1.0
 Architecture: iphoneos-arm
 Description: Rayman style Lockglyph icons
-Homepage: http://repo.orangefractal.net
+Homepage: http://orangefractal.net
 Maintainer: OrangeFractal <OrangeFractal@gmail.com>
 Author: OrangeFractal <OrangeFractal@gmail.com>
 Section: Themes
