--- a/Snipe/DEBIAN/control
+++ b/Snipe/DEBIAN/control
@@ -3,7 +3,7 @@ Name: Snipe Message Bubbles
 Version: 1.0
 Architecture: iphoneos-arm
 Description: Snipe stylized message bubbles
-Homepage: http://repo.orangefractal.net
+Homepage: http://orangefractal.net
 Maintainer: OrangeFractal <OrangeFractal@gmail.com>
 Author: OrangeFractal <OrangeFractal@gmail.com>
 Section: Themes
