--- a/ZeppelinSonictheHedgehog/DEBIAN/control
+++ b/ZeppelinSonictheHedgehog/DEBIAN/control
@@ -3,7 +3,7 @@ Name: Zeppelin - Sonic the Hedgehog
 Version: 1.0
 Architecture: iphoneos-arm
 Description: Sonic the Hedgehog Zeppelin icons
-Homepage: http://repo.orangefractal.net
+Homepage: http://orangefractal.net
 Maintainer: OrangeFractal <OrangeFractal@gmail.com>
 Author: OrangeFractal <OrangeFractal@gmail.com>
 Section: Themes
