--- a/RomanNumeralKeypad/DEBIAN/control
+++ b/RomanNumeralKeypad/DEBIAN/control
@@ -3,7 +3,7 @@ Name: Roman Keypad
 Version: 1.0
 Architecture: iphoneos-arm
 Description: Roman Numeral style keypad in black and white
-Homepage: http://repo.orangefractal.net
+Homepage: http://orangefractal.net
 Maintainer: OrangeFractal <OrangeFractal@gmail.com>
 Author: OrangeFractal <OrangeFractal@gmail.com>
 Section: Themes
