--- a/ArcadeKeypad/DEBIAN/control
+++ b/ArcadeKeypad/DEBIAN/control
@@ -1,9 +1,10 @@
 Package: net.orangefractal.ArcadeKeypad
-Name: Arcade Keypad
-Version: 1.0
+Name: Keypad - Arcade
+Version: 1.0.1
 Architecture: iphoneos-arm
 Description: Arcade style keypad in black and white
-Homepage: http://orangefractal.net
+Depiction: http://repo.orangefractal.net/depictions/ArcadeKeypad.html
+Homepage: http://github.com/orangefractal
 Maintainer: OrangeFractal <OrangeFractal@gmail.com>
 Author: OrangeFractal <OrangeFractal@gmail.com>
 Section: Themes
