--- a/LCDKeypad/DEBIAN/control
+++ b/LCDKeypad/DEBIAN/control
@@ -1,9 +1,10 @@
 Package: net.orangefractal.LCDKeypad
-Name: LCD Keypad
-Version: 1.0.1
+Name: Keypad - LCD
+Version: 1.0.2
 Architecture: iphoneos-arm
 Description: LCD style keypad in black and white
-Homepage: http://orangefractal.net
+Depiction: http://repo.orangefractal.net/depictions/LCDKeypad.html
+Homepage: http://github.com/orangefractal
 Maintainer: OrangeFractal <OrangeFractal@gmail.com>
 Author: OrangeFractal <OrangeFractal@gmail.com>
 Section: Themes
