--- a/LockGlyphRayman/DEBIAN/control
+++ b/LockGlyphRayman/DEBIAN/control
@@ -1,9 +1,10 @@
 Package: net.orangefractal.LockGlyphRayman
 Name: LockGlyph - Rayman
-Version: 1.0
+Version: 1.0.1
 Architecture: iphoneos-arm
 Description: Rayman style Lockglyph icons
-Homepage: http://orangefractal.net
+Depiction: http://repo.orangefractal.net/depictions/LockGlyphRayman.html
+Homepage: http://github.com/orangefractal
 Maintainer: OrangeFractal <OrangeFractal@gmail.com>
 Author: OrangeFractal <OrangeFractal@gmail.com>
 Section: Themes
