--- a/RomanNumeralKeypad/DEBIAN/control
+++ b/RomanNumeralKeypad/DEBIAN/control
@@ -1,9 +1,10 @@
 Package: net.orangefractal.RomanKeypad
-Name: Roman Keypad
-Version: 1.0
+Name: Keypad - Roman Numeral
+Version: 1.0.1
 Architecture: iphoneos-arm
 Description: Roman Numeral style keypad in black and white
-Homepage: http://orangefractal.net
+Depiction: http://repo.orangefractal.net/depictions/RomanKeypad.html
+Homepage: http://github.com/orangefractal
 Maintainer: OrangeFractal <OrangeFractal@gmail.com>
 Author: OrangeFractal <OrangeFractal@gmail.com>
 Section: Themes
