--- a/ZeppelinSonictheHedgehog/DEBIAN/control
+++ b/ZeppelinSonictheHedgehog/DEBIAN/control
@@ -1,9 +1,10 @@
 Package: net.orangefractal.ZeppelinSonictheHedgehog
 Name: Zeppelin - Sonic the Hedgehog
-Version: 1.0.1
+Version: 1.0.2
 Architecture: iphoneos-arm
 Description: Sonic the Hedgehog Zeppelin icons
-Homepage: http://orangefractal.net
+Depiction: http://repo.orangefractal.net/depictions/ZeppelinSonictheHedgehog.html
+Homepage: http://github.com/orangefractal
 Maintainer: OrangeFractal <OrangeFractal@gmail.com>
 Author: OrangeFractal <OrangeFractal@gmail.com>
 Section: Themes
